objects/CS_PRM_FeaturePermissionSetMap__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>PRM: APR 14 Custom setting for Feature to Permission map</description>
    <fields>
        <fullName>PartnerLicenseType__c</fullName>
        <label>PartnerLicenseType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PermissionSetIds__c</fullName>
        <label>PermissionSetIds</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PermissionSetNames__c</fullName>
        <label>PermissionSetNames</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfileId__c</fullName>
        <label>ProfileId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>CS_PRM_FeaturePermissionSetMap</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PartnerLicenseType__c</columns>
        <columns>ProfileId__c</columns>
        <columns>PermissionSetIds__c</columns>
        <columns>PermissionSetNames__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>